# ontology-aip-agent

./: .env.example  .gitignore  CLAUDE.md  README-CN.md  README.md  config.yaml  pyproject.toml
.github/: copilot-instructions.md
docs/architecture/: architecture.drawio  dynasense_architecture.drawio  rag_enhancements.drawio
ontologies/: ecommerce.rdf  education.rdf  finance.rdf  healthcare.rdf  manufacturing.rdf  retail.rdf
src/: __main__.py  config.py
src/agent/: graph.py  nodes.py  state.py
src/cli/: app.py
src/database/: connectors.py  executor.py  mock_data.py  schema.py
src/evaluation/: __init__.py  case.py  dataset.py  judges.py  report.py  run.py  runner.py
src/federation/: __init__.py  _federated_plan.py  executor_registry.py  joiner.py  parser.py  planner.py  rewriter.py
src/llm/: base.py  ollama.py  openai_compat.py  vertex.py
src/observability/: __init__.py  langfuse_client.py
src/ontology/: context.py  parser.py  provider.py  rdf_provider.py
src/security/: __init__.py  audit.py  context.py  policy.py  principal.py
src/web/: app.py  visualizer.py
tests/: conftest.py  test_cli.py  test_config.py  test_connectors.py  test_context.py  test_evaluation_case.py  test_evaluation_dataset.py  test_evaluation_judges.py  test_evaluation_report.py  test_evaluation_runner.py  test_executor.py  test_graph_federation.py  test_integration.py  test_mock_data.py  test_nodes.py  test_observability.py  test_ollama.py  test_openai_compat.py  test_parser.py  test_pattern_d.py  test_rdf_provider.py  test_schema.py  test_security.py  test_web.py
(+19 files in other folders)
